--- a/public/style.css
+++ b/public/style.css
@@ -101,6 +101,21 @@ body {
   width: fit-content;
 }
 
+#switch-camera-button {
+  font-size: 15px;
+  position: absolute;
+  bottom: 5px;
+  right: 160px;
+  z-index: 2;
+  border-radius: 10px;
+  font-family: Avenir;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 1px solid rgb(73, 144, 226);
+  display: block;
+  width: fit-content;
+}
+
 #full-screen-video {
   position: absolute;
   width: 100vw;
